# ChangeLog for dev-db/slony1
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/slony1/ChangeLog,v 1.25 2011/08/10 22:47:31 titanofold Exp $

*slony1-2.0.7-r1 (10 Aug 2011)

  10 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  +slony1-2.0.7-r1.ebuild, +files/ldflags.patch:
  Fix LDFLAGS not being respected

*slony1-2.0.7 (08 Aug 2011)

  08 Aug 2011; Aaron W. Swenson <titanofold@gentoo.org>
  -files/slony1_remove_jave.patch, -slony1-1.1.5.ebuild, -slony1-1.2.12.ebuild,
  -slony1-1.2.17.ebuild, +slony1-2.0.7.ebuild:
  Fixes bug 376013 and bug 377839. Removed unnecessary patch and old ebuilds.

*slony1-2.0.6 (11 Apr 2011)
*slony1-1.2.22 (11 Apr 2011)

  11 Apr 2011; Patrick Lauer <patrick@gentoo.org> +slony1-1.2.22.ebuild,
  +slony1-2.0.6.ebuild:
  Bump, adding 2.0, fixes #306369

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> slony1-1.1.5.ebuild,
  slony1-1.2.10.ebuild, slony1-1.2.12.ebuild, slony1-1.2.17.ebuild:
  Migrating away from deprecated postgres virtuals

*slony1-1.2.17 (22 Oct 2009)

  22 Oct 2009; Patrick Lauer <patrick@gentoo.org> +slony1-1.2.17.ebuild:
  Bump

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> slony1-1.1.5.ebuild,
  slony1-1.2.10.ebuild, slony1-1.2.12.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  14 Mar 2008; Christian Heim <phreak@gentoo.org> slony1-1.1.5.ebuild,
  slony1-1.2.10.ebuild, slony1-1.2.12.ebuild:
  Fixing minor syntax errors.

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Masatomo Nakano (nakano, #200340) from metadata.xml.

*slony1-1.2.12 (23 Dec 2007)

  23 Dec 2007; masatomo <masatomo@gentoo.org> -slony1-1.2.9.ebuild,
  +slony1-1.2.12.ebuild:
  Version bump.

  15 Aug 2007; Markus Ullmann <jokey@gentoo.org> slony1-1.2.10.ebuild:
  Stable on x86 wrt bug #143600

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> slony1-1.2.10.ebuild:
  amd64 stable, bug 143600
